--- a/html_pages/index_page.html
+++ b/html_pages/index_page.html
@@ -26,7 +26,7 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 </a>
 
 <a href="https://vk.com/club217316523">
-<img class="button" src="https://github.com/ilya2409/for_gallery/blob/main/vk_log%20%E2%80%94%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F.png?raw=true" alt="NEW-POST">
+<img class="button" src="https://github.com/ilya2409/for_gallery/blob/main/vk_form_bor_logo.png?raw=true" alt="NEW-POST">
 </a>
 
 
