--- a/html_pages/index_page_0.html
+++ b/html_pages/index_page_0.html
@@ -84,6 +84,8 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 
 
 
+<img id="img_2"  alt="Anonim:"  class="images"  src="asd" >
+
 <a href="#up_up" class="dop_key" id="k_2">@</a>
 
 </div>
@@ -159,7 +161,7 @@ height: 100px; }
 animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
-.logo_2 { width: 74px; height: 74px; margin: 0px 10px 0px 10px; }
+.logo_2 { width: 70px; height: 70px; margin: 0px 10px 0px 10px; }
 .logo_3 {
 border: 4px; border-radius: 16px; }
 
