--- a/html_pages/index_page_0.html
+++ b/html_pages/index_page_0.html
@@ -40,7 +40,7 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 </div>
 
 </head>
-<body>
+<body class="body_11">
 
 <div class="main_blocks">
 
@@ -145,15 +145,17 @@ max-width: 550px;}
 border-bottom: 8px solid #00cccc; }
 
 .header { display: flex;
-border: 4px solid #00cccc; border-radius: 14px;
-padding: 10px; background-color: #000a09;
+-border-bottom: 4px solid #00cccc; border-radius: 0px;
+padding: 10px;
+box-shadow: 0px 7px 8px #1fd1ce;
+background-color: #000a09;
 flex-wrap: nowrap;
 flex-direction: row;
 align-content: center;
 align-items: center;
 justify-content: space-between;
-margin: 0px 0px 10px 0px;
-width: auto;
+margin: 0px 0px 40px 0px;
+width: 0 auto;
 height: 100px; }
 
 .slide-in-top :hopper{
@@ -171,6 +173,8 @@ align-content: center;
 justify-content: center;
 align-items: center;
 margin: 0px 0px 0px 0px; }
+
+.body_11 { margin: 0px 0px 0px 0px; }
 
 </style>
 
