--- a/html_pages/index_page_0.html
+++ b/html_pages/index_page_0.html
@@ -20,7 +20,7 @@ content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=
 <h1 class="h_text" id="up_up"> ◽ GittyLab ◽</h1>
 </div>
 
-<div>
+<div class="header_2">
 
 <a href="https://www.youtube.com/channel/UCpoBhCvjTfzsbbU1uO7U9sA">
 <img class="button" src="https://github.com/ilya2409/for_gallery/blob/main/yt_log.png?raw=true" alt="YOUTUBE">
@@ -172,7 +172,7 @@ display: flex;
 align-content: center;
 justify-content: center;
 align-items: center;
-margin: 0px 0px 0px 0px; }
+margin: 0px 10px 0px 10px; }
 
 .body_11 { margin: 0px 0px 0px 0px; }
 
